add route to get openapi
